<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="48dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeration"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_apply_for_this_workshop"
        app:layout_constraintTop_toBottomOf="@id/tv1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/red"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2"
            android:text="@string/yes"
            android:backgroundTint="@color/green" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>