<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:elevation="4dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circular"
            android:layout_gravity="center_horizontal|top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="75dp"
            android:elevation="2dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:paddingTop="75dp"
            android:background="@drawable/profile_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="#D6D6D6"
                    android:contentDescription="@string/person"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_baseline_person_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/nameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guest"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="16sp"
                        android:textColor="#D6D6D6"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/applyBtn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="#D6D6D6"
                    android:padding="2dp"
                    android:contentDescription="@string/person"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_baseline_email_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gmail_com"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:textSize="16sp"
                        android:textColor="#D6D6D6"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/applyBtn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="#D6D6D6"
                    android:contentDescription="@string/person"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_baseline_app_registration_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/registeredTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workshops_registered"
                        android:textSize="16sp"
                        android:textColor="#D6D6D6"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/applyBtn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="#D6D6D6"
                    android:contentDescription="@string/person"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_baseline_checklist_rtl_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workshops_attended"
                        android:textSize="16sp"
                        android:textColor="#D6D6D6"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/line"
                android:layout_marginBottom="20dp"/>


            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:visibility="gone"
                android:backgroundTint="@color/purple_700"
                android:layout_marginHorizontal="55dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>