<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/activity_background"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appNameTV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="cursive"
                android:text="@string/learnshala"
                android:layout_marginTop="75dp"
                android:textColor="@color/white"
                android:textSize="55sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:src="@drawable/img"
                android:layout_weight="11"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/image"
                app:layout_constraintTop_toBottomOf="@id/appNameTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/logInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="70dp"
                android:textSize="22sp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="2dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="25dp"
                android:textSize="22sp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/logInBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/skipBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_marginTop="40dp"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:elevation="2dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_background2"
                android:layout_marginHorizontal="85dp"
                app:layout_constraintTop_toBottomOf="@id/signUpBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

