<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/ic_background"
    tools:context=".activities.SignUpActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <ImageButton
        android:id="@+id/backBtnIB"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/TV"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/login"
        android:layout_marginStart="30dp"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backBtnIB"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#424040"
                android:text="@string/enter_your_email_id_and_password_to_get_started"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:elevation="2dp"
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/TV2"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name"
                    android:textColorHint="#C1BDBD"
                    app:boxStrokeColor="@color/strokeColor"
                    app:hintTextColor="@color/strokeColor"
                    app:startIconCheckable="true"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="#FFFFFF">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/eT_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/name"
                        android:inputType="text"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="EditableContentDescCheck,DuplicateSpeakableTextCheck">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    android:textColorHint="#C1BDBD"
                    app:boxStrokeColor="@color/strokeColor"
                    app:hintTextColor="@color/strokeColor"
                    app:startIconCheckable="true"
                    app:startIconTint="#FFFFFF"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/eT_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/name"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="EditableContentDescCheck">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:textColorHint="#C1BDBD"
                    app:boxStrokeColor="@color/strokeColor"
                    app:hintTextColor="@color/strokeColor"
                    app:startIconCheckable="true"
                    app:startIconTint="#FFFFFF"
                    app:startIconDrawable="@drawable/ic_baseline_lock_person_24">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/eT_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/name"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="EditableContentDescCheck">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/getStartedBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_started"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginTop="30dp"
                    android:elevation="2dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:background="@drawable/button_background"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="#D1D1D1"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/signUpBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/strokeColor"
                        android:textSize="15sp"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>